[package]
name = "learning_vmaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
gstreamer = "0.21.0"
gstreamer-app = "0.21.0"
libvmaf-sys = { path = "./libvmaf-sys" }
log = "0.4.20"
